codex-rs/tui/src/snapshots/codex_tui__startup_hooks_review__tests__startup_hooks_picker_progress_40.snap
---
source: tui/src/startup_hooks_review.rs
expression: "render_lines(&view, 40)"
---

  Hooks need review
  2 hooks are new or changed.
  Hooks can run outside the sandbox
  after you trust them.
  Trusting hooks...


›    Review hooks
     Trust all and continue
     Continue without trusting (hooks
     won't run)
